displaying products in admin panel

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
 :root {
     --blue: #2980b9;
-    --red: tomato;
+    --red: rgb(252, 82, 53);
     --orange: rgb(255, 136, 0);
     --black: #333;
     --white: #fff;
