fix some issue in ui

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 :root {
     --blue: #2980b9;
     --red: rgb(252, 82, 53);
-    --orange: rgb(255, 136, 0);
+    --orange: rgba(255, 136, 0, 0.719);
     --black: #333;
     --white: #fff;
     --bg-color: #eee;
@@ -131,7 +131,12 @@ section {
 .header .flex .logo {
     margin-right: auto;
     font-size: 2.5rem;
+    text-align: center;
     color: var(--white);
+}
+
+.header .flex .logo span {
+    margin-bottom: 15px;
 }
 
 .header .flex .navbar a {
