--- a/css/style.css
+++ b/css/style.css
@@ -427,6 +427,7 @@ section {
     color: var(--white);
     padding: 1rem;
     margin-top: 1rem;
+    font-weight: 800;
 }
 
 .order-message-container {
