--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,10 @@ section {
     border: var(--border);
 }
 
+.checkout-form form .flex .inputBox select::selection {
+    color: green;
+}
+
 .display-order {
     max-width: 50rem;
     background-color: var(--white);
