--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 :root {
     --blue: #2980b9;
     --red: rgb(252, 82, 53);
-    --orange: rgb(255, 136, 0);
+    --green: #6BCB77;
     --black: #333;
     --white: #fff;
     --bg-color: #eee;
@@ -51,7 +51,7 @@ section {
     display: block;
     width: 100%;
     text-align: center;
-    background-color: var(--orange);
+    background-color: var(--green);
     color: var(--white);
     font-size: 1.7rem;
     padding: 1.2rem 3rem;
@@ -72,7 +72,7 @@ section {
 }
 
 .option-btn {
-    background-color: var(--orange);
+    background-color: var(--green);
 }
 
 .delete-btn {
@@ -113,7 +113,7 @@ section {
 }
 
 .header {
-    background-color: var(--orange);
+    background-color: var(--green);
     position: sticky;
     top: 0;
     left: 0;
@@ -336,7 +336,7 @@ section {
     padding: .5rem 1.5rem;
     cursor: pointer;
     font-size: 2rem;
-    background-color: var(--orange);
+    background-color: var(--green);
     color: var(--white);
 }
 
